sf-hrms/force-app/main/default/objects/Tax_Declaration__c/Tax_Declaration__c.object-meta.xml
<CustomObject>
    <label>Tax Declaration</label>
    <nameField>
        <displayFormat>TD-{0000}</displayFormat>
        <label>Declaration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Declarations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>