sf-hrms/force-app/main/default/objects/Tax_Declaration__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Tax Declarations</relationshipLabel>
    <relationshipName>Tax_Declarations</relationshipName>
    <type>Lookup</type>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>