sf-hrms/force-app/main/default/objects/Tax_Declaration__c/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <label>Financial Year</label>
    <length>10</length>
    <type>Text</type>
    <required>true</required>
</CustomField>