sf-hrms/force-app/main/default/objects/Tax_Declaration__c/fields/Home_Loan_Interest__c.field-meta.xml
<CustomField>
    <fullName>Home_Loan_Interest__c</fullName>
    <label>Home Loan Interest (Sec 24b)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>