sf-hrms/force-app/main/default/objects/Tax_Declaration__c/fields/HRA_Rent_Paid__c.field-meta.xml
<CustomField>
    <fullName>HRA_Rent_Paid__c</fullName>
    <label>Annual Rent Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>