sf-hrms/force-app/main/default/objects/Tax_Declaration__c/fields/Landlord_PAN__c.field-meta.xml
<CustomField>
    <fullName>Landlord_PAN__c</fullName>
    <label>Landlord PAN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>