sf-hrms/force-app/main/default/objects/Tax_Declaration__c/fields/Other_Income__c.field-meta.xml
<CustomField>
    <fullName>Other_Income__c</fullName>
    <label>Other Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>