sf-hrms/force-app/main/default/objects/Tax_Declaration__c/fields/Previous_Employer_TDS__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer_TDS__c</fullName>
    <label>Previous Employer TDS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>