sf-hrms/force-app/main/default/objects/Tax_Declaration__c/fields/Section_80D__c.field-meta.xml
<CustomField>
    <fullName>Section_80D__c</fullName>
    <label>Section 80D (Medical Insurance)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>