sf-hrms/force-app/main/default/objects/Tax_Declaration__c/fields/Section_80EEA__c.field-meta.xml
<CustomField><fullName>Section_80EEA__c</fullName><label>Section 80EEA (First Home)</label><type>Currency</type><precision>18</precision><scale>2</scale></CustomField>