sf-hrms/force-app/main/default/objects/Tax_Declaration__c/fields/Section_80G__c.field-meta.xml
<CustomField>
    <fullName>Section_80G__c</fullName>
    <label>Section 80G (Donations)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>