sf-hrms/force-app/main/default/objects/Tax_Declaration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
        <value><fullName>Submitted</fullName><default>false</default><label>Submitted</label></value>
        <value><fullName>Verified</fullName><default>false</default><label>Verified</label></value>
    </valueSetDefinition></valueSet>
</CustomField>