sf-hrms/force-app/main/default/objects/Tax_Declaration__c/fields/Tax_Regime__c.field-meta.xml
<CustomField>
    <fullName>Tax_Regime__c</fullName>
    <label>Tax Regime</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Old Regime</fullName><default>true</default><label>Old Regime</label></value>
        <value><fullName>New Regime</fullName><default>false</default><label>New Regime (Sec 115BAC)</label></value>
    </valueSetDefinition></valueSet>
</CustomField>